# BronDatamodel

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md
.github/workflows/: python-package.yml
BROCategoricals/: Waardelijsten BRO COM.xlsx  Waardelijsten BRO GAR.xlsx  Waardelijsten BRO GLD.xlsx  Waardelijsten BRO GMN.xlsx  Waardelijsten BRO GMW.xlsx
BROMappings/: Mapping BRO GLD Events.xlsx  Mapping BRO GMN Events.xlsx  Mapping BRO GMW Events.xlsx  Mapping BRO GUF Events.xlsx  Mapping en definitie BRO BHR.xlsx  Mapping en definitie BRO GAR.xlsx  Mapping en definitie BRO GLD.xlsx  Mapping en definitie BRO GMN.xlsx  Mapping en definitie BRO GMW.xlsx  Mapping en definitie BRO GPD.xlsx  Mapping en definitie BRO GUF.xlsx  Mapping en definitie BRO SAD.xlsx  Mapping en definitie Men GMW.xlsx
Documentation/: Schema's Bron-datamodel.vsd
ExampleData/: 2024-08-29 Testdata Provincie Utrecht (export).bron  2024-09-16 Testdata Provincie Utrecht (export).bron  2024-09-16b Testdata Provincie Utrecht (export).bron
Python/: .gitignore  .isort.cfg  README.md  pyproject.toml
Python/.gitlab/issue_templates/: bug.md  documentationissue.md  question.md  task.md
Python/.gitlab/merge_request_templates/: Default.md
Python/pybron/: bronv3.py  schema_generation.py
Python/pybron/schema/: BRON.py  BRONEnums.py  BRONManualTypes.py  BRONTypes.py  excel_shema.py  matlabbasemodel.py
Python/tests/: basic_read_test.py  matlabdate_test.py  meetnet_test.py  pydantic_generation_test.py
pybron/: .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
pybron/.gitlab/issue_templates/: default.md  feature.md
pybron/pybron/data/: BROObject - GMW data file NL samengevoegd (v2.x).xlsx
pybron/pybron/schema/: BRON.py  BRONTypes.py  excel_shema.py
pybron/rws_bron/: bronv3.py  schema_generation.py
pybron/rws_bron/data/: Mapping en definitie BRO GMW.xlsx
pybron/rws_bron/schema/: BRON.py  BRONEnums.py  BRONTypes.py  excel_shema.py  matlabbasemodel.py
pybron/rws_ketentest/data/: BROObject - GMW data file NL samengevoegd (v2.x).xlsx  Mapping en definitie BRO GMW.xlsx
pybron/tests/: basic_read_test.py  pydantic_generation_test.py
pybron/tests/data/: 2024-05-21 Testdata Provincie Utrecht (export).bron  2024-06-10 Testdata Provincie Utrecht (export tables2structs d.GMW v6) test.bron  2024-06-10 Testdata Provincie Utrecht (export, v7.3).bron
(+2 files in other folders)
